Fixed overflow bug that prevented the menu from being displayed on iPhone.

--- a/less/bootstrap.mobile-nav.less
+++ b/less/bootstrap.mobile-nav.less
@@ -7,8 +7,8 @@
  * http://opensource.org/licenses/MIT
  * 
  * Author: Adam J De Lucia
- * Version: 1.0.0
- * Date: May 1, 2015
+ * Version: 1.0.1
+ * Date: May 5, 2015
  * 
  */
 
@@ -39,6 +39,7 @@
     .navbar-collapse.collapse {
         &.in {
             min-height: 30px;
+            overflow: visible;
 
             #@{mobile-nav-id} {
                 position: fixed;
